<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/apptitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:layout_gravity="top|center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/colorAccentDark" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1.0"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/developedby"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="21dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:text="https://www.inventati.org/1337gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activeperiod"
                android:layout_gravity="top|left"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help_activeperiod"
                android:layout_gravity="top|left"
                android:layout_marginBottom="13dp"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restperiod"
                android:layout_gravity="top|left"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help_restperiod"
                android:layout_gravity="top|left"
                android:layout_marginBottom="13dp"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prepperiod"
                android:layout_gravity="top|left"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help_prepperiod"
                android:layout_gravity="top|left"
                android:textColor="@color/textColor"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>