<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:textSize="32sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/activeperiod"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/restperiod"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/restPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/prepperiod"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:ems="5"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </GridLayout>

    <Button
        android:id="@+id/startButton"
        style="@style/hiitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/start" />
    <Button
        android:id="@+id/helpButton"
        style="@style/hiitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/label_help" />

</LinearLayout>