<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/periodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="32dp"
        android:text="@string/active"
        android:layout_marginBottom="5dp"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="32dp"
            android:text="@string/label_set"
            android:maxLines="1"
            android:layout_gravity="top|left"/>

        <TextView
            android:id="@+id/setText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1"
            android:gravity="top|right"
            android:maxLength="2"
            android:maxLines="1"
            android:text="0"
            android:textColor="@color/textColor"
            android:textSize="32dp" />
    </GridLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:max="500"
                android:progress="0"
                android:progressDrawable="@drawable/progress_drawable"
                android:rotation="-90" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timerDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:textSize="64dp" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/startTimer"
            style="@style/hiitbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/start"
            android:textSize="18dp" />

        <Button
            android:id="@+id/stopTimer"
            style="@style/hiitbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/stop"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>